Add support for building a JAR

--- a/build.gradle
+++ b/build.gradle
@@ -21,3 +21,11 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'retrain.MainKt'
+    }
+
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+}
