Add OkHttp for file downloading
Will be used to download the Retraining Script from
TensorFlow's GitHub repository.

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile "com.squareup.okhttp3:okhttp:3.8.0"
 }
 
 jar {
