--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ group 'com.daksh.tensorflow'
 version '1.0'
 
 buildscript {
-    ext.kotlin_version = '1.1.2-2'
+    ext.kotlin_version = '1.1.3'
 
     repositories {
         mavenCentral()
